plex/plex-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
    kubernetes.io/name: "plex"
spec:
  selector:
    app: plex
  ports:
  - name: plex
    port: 32400
    targetPort: 32400
  externalIPs: ["10.0.1.14"]
